--- a/src/app/modules/home/components/dashboard/dashboard.component.html
+++ b/src/app/modules/home/components/dashboard/dashboard.component.html
@@ -2,6 +2,9 @@
   <p>dashboard works!</p>
 
   <div class="col-lg-12">
-    <app-inbox></app-inbox>
+    <app-inbox
+      [cars]="inboxData"
+      (clickEvent)="getChildData($event)"
+    ></app-inbox>
   </div>
 </div>
