--- a/src/app/modules/home/components/inbox/inbox.component.html
+++ b/src/app/modules/home/components/inbox/inbox.component.html
@@ -1,1 +1,21 @@
-<p>inbox works!</p>
+<p-table [value]="cars">
+  <ng-template pTemplate="header">
+    <tr>
+      <th>Vin</th>
+      <th>Year</th>
+      <th>Brand</th>
+      <th>Color</th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-car>
+    <tr>
+      <td>{{ car?.vin || "NA" }}</td>
+      <td>{{ car?.year }}</td>
+      <td>{{ car?.brand }}</td>
+      <td>{{ car?.color }}</td>
+    </tr>
+  </ng-template>
+</p-table>
+<br />
+<button type="button" (click)="buttonClick()">Click</button>
+<br />
