--- a/src/app/modules/home/components/dashboard/dashboard.component.html
+++ b/src/app/modules/home/components/dashboard/dashboard.component.html
@@ -2,6 +2,11 @@
   <p>dashboard works!</p>
 
   <div class="col-lg-12">
+    <app-slider></app-slider>
+  </div>
+  <br />
+  <br />
+  <div class="col-lg-12">
     <app-inbox
       [cars]="inboxData"
       (clickEvent)="getChildData($event)"
