--- a/src/app/modules/home/components/dashboard/dashboard.component.html
+++ b/src/app/modules/home/components/dashboard/dashboard.component.html
@@ -1,6 +1,22 @@
 <div class="row pt-4">
-  <p>dashboard works!</p>
-
+  <p-table [value]="posts?.data">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>ID</th>
+        <th>Title</th>
+        <th>User</th>
+        <th>Body</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-post>
+      <tr>
+        <td>{{ post?.id }}</td>
+        <td>{{ post?.title }}</td>
+        <td>{{ post?.user_id }}</td>
+        <td>{{ post?.body }}</td>
+      </tr>
+    </ng-template>
+  </p-table>
   <div class="col-lg-12">
     <app-slider></app-slider>
   </div>
