--- a/src/app/modules/home/components/dashboard/dashboard.component.html
+++ b/src/app/modules/home/components/dashboard/dashboard.component.html
@@ -1,5 +1,36 @@
 <div class="row pt-4">
-  <p-table [value]="posts?.data">
+  <div *ngIf="advices2$ | async as advices">
+    <table>
+      <tr>
+        <th>ID</th>
+        <th>Advice</th>
+      </tr>
+      <tr *ngFor="let ad of advices">
+        <td>{{ ad?.id }}</td>
+        <td>{{ ad?.advice }}</td>
+      </tr>
+    </table>
+  </div>
+  <!-- <div class="col-lg-12">
+    <div *ngIf="advices$ | async as advice">
+      ID: {{ advice?.id }}
+      <br />
+      Advice: {{ advice?.advice }}
+    </div>
+  </div> -->
+
+  <div class="col-lg-12">
+    <app-slider [advice]="advices$ | async"></app-slider>
+  </div>
+  <br />
+  <br />
+  <div class="col-lg-12">
+    <app-inbox
+      [cars]="inboxData"
+      (clickEvent)="getChildData($event)"
+    ></app-inbox>
+  </div>
+  <p-table [value]="posts$ | async">
     <ng-template pTemplate="header">
       <tr>
         <th>ID</th>
@@ -17,15 +48,22 @@
       </tr>
     </ng-template>
   </p-table>
-  <div class="col-lg-12">
-    <app-slider></app-slider>
-  </div>
-  <br />
-  <br />
-  <div class="col-lg-12">
-    <app-inbox
-      [cars]="inboxData"
-      (clickEvent)="getChildData($event)"
-    ></app-inbox>
-  </div>
+  <!-- <p-table [value]="posts?.data">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>ID</th>
+        <th>Title</th>
+        <th>User</th>
+        <th>Body</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-post>
+      <tr>
+        <td>{{ post?.id }}</td>
+        <td>{{ post?.title }}</td>
+        <td>{{ post?.user_id }}</td>
+        <td>{{ post?.body }}</td>
+      </tr>
+    </ng-template>
+  </p-table> -->
 </div>
